fixed confusion with z-index in header.  Removed unnecessary indexes

--- a/css/style.css
+++ b/css/style.css
@@ -300,9 +300,9 @@ picture {
 }
 
 .header__top {
+  position: relative;
   width: 100%;
   background-color: #000;
-  z-index: 3;
 }
 
 .header__container {
@@ -460,7 +460,6 @@ picture {
   align-items: center;
   padding-top: 20px;
   padding-bottom: 20px;
-  z-index: 2;
 }
 
 .header__select-list,
@@ -2282,7 +2281,6 @@ picture {
   flex-direction: column;
   background-color: #fff;
   border-top: 1px solid #cacaca;
-  z-index: 1;
 }
 
 .contacts__wrapper > *:not(.contacts__map) {
@@ -2470,6 +2468,10 @@ picture {
   }
 
   /* HEADER 1440 */
+  .header__top {
+    position: static;
+  }
+  
   .header__container {
     padding-top: 29px;
     padding-bottom: 28px;
@@ -2493,11 +2495,11 @@ picture {
     padding-bottom: 50px;
     background-color: rgba(0, 0, 0, .9);
     visibility: hidden;
-    z-index: 4;
   }
 
   .header__menu_open {
     visibility: visible;
+    z-index: 10;
   }
 
   .header__menu-wrapper {
@@ -2526,18 +2528,14 @@ picture {
     border-radius: 100px;
   }
 
-  .header__container > *:not(.header__burger):not(.header__bottom):not(.header__menu) {
-    z-index: 3;
-  }
-
   .header__burger {
     display: block;
     order: 1;
-    z-index: 5;
   }
 
   .header__burger_open {
     text-align: center;
+    z-index: 11;
   }
 
   .header__burger_open .burger {
@@ -2561,9 +2559,9 @@ picture {
   }
 
   .header__bottom {
-    position: static;
-    height: 100%;
+    width: 100%;
     background-color: transparent;
+    z-index: 1;
   }
 
   .header__bottom .container {
@@ -2598,7 +2596,7 @@ picture {
     background-color: #18171b;
     opacity: 1;
     visibility: visible;
-    z-index: 6;
+    z-index: 9;
   }
 
   .header__search-open,
@@ -2828,7 +2826,7 @@ picture {
     opacity: 1;
     border: none;
     border-radius: 0;
-    z-index: 7 !important;
+    z-index: 9;
   }
 
   .header__search-open_active::before {
@@ -2848,15 +2846,15 @@ picture {
   }
 
   .header__bottom {
+    position: absolute;
+    top: 0;
     padding: 0;
   }
 
   .search-form {
     width: 100%;
-    height: 100%;
     margin-right: 94px;
-    padding-left: 50px;
-    padding-right: 98px;
+    padding: 36px 98px 30px 50px;
     background-color: #000;
   }
 
@@ -2866,10 +2864,6 @@ picture {
 
   .search-form__input {
     width: 100%;
-  }
-
-  .header__search-open_active+.header__bottom {
-    z-index: 6;
   }
 
   .about-us__text {
